--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,9 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=db_laravel_playground
+DB_HOST=127.0.0.1 (Sesuaikan dengan host database Anda)
+DB_PORT=3306 (Sesuaikan dengan port database Anda)
+DB_DATABASE=db_laravel_playground (Sesuaikan dengan Database anda)
 DB_USERNAME=root
 DB_PASSWORD=
 
